Fixed overlap of headings on small devices

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     <!-- About Me -->
     <section id="about">
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-xs-12 col-sm-4 col-md-2">
           <div class="heading about">
             <span class="glyphicon glyphicon-sunglasses" style="font-size:7em" aria-hidden="true"></span>
             <h2>About Me</h2>
           </div>
         </div>
-        <div class="col-md-10">
+        <div class="col-xs-12 col-sm-8 col-md-10">
           <p>I have experience in cyber security, web development, and video game development, love each of the fields, and am excited for opportunities in any of them. My problem-solving skills, my careful attention to detail, and my ability to work independently or in a team tranferred to allow me to thoroughly enjoy all the positions I've held. I am pursuing an Offensive Security Certified Professional (OSCP), developing video with the local independent development community, and continuing to improve upon this website to keep my skills in each of these areas sharp. Please look over my previous experience and skills and contact me if you have any questions or if you would like me to join your team!</p>
         </div>
       </div>
@@ -80,19 +80,19 @@
     <!-- Experience -->
     <section id="experience">
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-xs-12 col-sm-4 col-md-2">
           <div class="heading">
             <span class="glyphicon glyphicon-briefcase" style="font-size:7em" aria-hidden="true"></span>
             <h2>Experience</h2>
           </div>
         </div>
-        <div class="col-md-10">
+        <div class="col-xs-12 col-sm-8 col-md-10">
           <h3>Unity3D Programming Engineer</h3>
           <h4>Galvanize Labs</h4>
           <p>In this short-term contract position, I used the Unity3D game engine to write scripts, fix bugs, and reorganize game assets for an educational platformer game. I also provided gameplay and issues feedback to the lead developer and game designer. Read more about it below.</p>
           <p><a href="http://www.takenchargegame.com">Taken Charge</a></p>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-xs-12 col-sm-8 col-md-10">
               <h3>Web Developer</h3>
               <h4>HDI - Nebraska Chapter</h4>
               <p>I volunteered in maintaining the website for this volunteer professional organization while they underwent a major website revision.</p>
@@ -100,7 +100,7 @@
           </div>
 
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-xs-12 col-sm-8 col-md-10">
               <h3>Business Support Specialist</h3>
               <h4>CSG International</h4>
               <p>I supported our company's business continuity planning operations, this involved:</p>
@@ -121,146 +121,146 @@
     <!-- Education -->
     <section id="education">
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-xs-12 col-sm-4 col-md-2">
           <div class="heading">
             <span class="glyphicon glyphicon-book" style="font-size:7em" aria-hidden="true"></span>
             <h2>Education</h2>
           </div>
         </div>
-        <div class="col-md-10">
+        <div class="col-xs-12 col-sm-8 col-md-10">
           <h3>Bachelors of Science Applied Computer Science, Cyber Security Minor</h3>
           <h4>Troy University</h4>
           <p>Computer Science Coursework: Data Structures and Algorithms; Programming Languages; Web Development
             Technologies; Software Engineering; Systems Analysis & Design; Operating Systems; Networking; Databases; COBOL
             Programming</p>
-          <p>Cybersecurity Coursework: Computer Forensics; Cyber Crime; Computer Security</p>
-          <p>Completed cyber security training courses in digital forensics, secure software, cyber law, and cyber incident analysis
-            and response through the National Emergency Response and Rescue Training Center in cooperation with the
-            Department of Homeland Security and Federal Emergency Management Agency (DHS/FEMA).</p>
+            <p>Cybersecurity Coursework: Computer Forensics; Cyber Crime; Computer Security</p>
+            <p>Completed cyber security training courses in digital forensics, secure software, cyber law, and cyber incident analysis
+              and response through the National Emergency Response and Rescue Training Center in cooperation with the
+              Department of Homeland Security and Federal Emergency Management Agency (DHS/FEMA).</p>
 
-            <div class="row">
-              <div class="col-md-12">
-                <h3>Certification</h3>
-                <h4>Offensive Security Certified Professional (OSCP)</h4>
-                <p>I am currently completing the coursework to prepare for the OSCP exam. I gained an interest in cyber security after completing undergrad courses in the subject, and I wanted to learn more about the tools used by those seeking to break into a network. So far I have found the course to be incredibly helpful in building my skills in Linux, bash scripting, and has helped my understanding of computer networks, and I look forward to taking the exam in July.</p>
-                <p>More information about Offensive Security can be found <a href="https://www.offensive-security.com/">here</a>.</p>
+              <div class="row">
+                <div class="col-xs-12 col-sm-8 col-md-10">
+                  <h3>Certification</h3>
+                  <h4>Offensive Security Certified Professional (OSCP)</h4>
+                  <p>I am currently completing the coursework to prepare for the OSCP exam. I gained an interest in cyber security after completing undergrad courses in the subject, and I wanted to learn more about the tools used by those seeking to break into a network. So far I have found the course to be incredibly helpful in building my skills in Linux, bash scripting, and has helped my understanding of computer networks, and I look forward to taking the exam in July.</p>
+                  <p>More information about Offensive Security can be found <a href="https://www.offensive-security.com/">here</a>.</p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </section>
-      <hr>
+        </section>
+        <hr>
 
-      <!-- Skills -->
-      <section id="skills">
-        <div class="row">
-          <div class="col-md-2">
-            <div class="heading">
-              <span class="glyphicon glyphicon-wrench" style="font-size:7em" aria-hidden="true"></span>
-              <h2>Skills</h2>
-            </div>
-          </div>
-          <div class="col-md-10">
-            <div id="pieLanguages"></div>
-            <div id="pieTools"></div>
-          </div>
-        </div>
-      </section>
-
-    </div> <!-- /container -->
-
-    <!-- Footer -->
-    <section id="contact">
-      <div class="container-fluid footer">
-        <div class="container"> 
+        <!-- Skills -->
+        <section id="skills">
           <div class="row">
-            <div class="col-md-2">
-              <div class="heading contact">
-                <span class="glyphicon glyphicon-user" style="font-size:7em" aria-hidden="true"></span>
-                <h2>Contact Me</h2>
+            <div class="col-xs-12 col-sm-4 col-md-2">
+              <div class="heading">
+                <span class="glyphicon glyphicon-wrench" style="font-size:7em" aria-hidden="true"></span>
+                <h2>Skills</h2>
               </div>
             </div>
-            <div class="col-md-10">
+            <div class="col-xs-12 col-sm-8 col-md-10">
+              <div id="pieLanguages" class="pieCharts"></div>
+              <div id="pieTools" class ="pieCharts"></div>
+            </div>
+          </div>
+        </section>
 
-              <div class="row">
-                <div class="col-md-1 col-md-offset-4">
-                  <div class="contactGlyph">
-                    <a href="https://maps.google.com/?q=5420+N+Morgan+St+Alexandria,+VA+22312"><i class="fa fa-map-marker fa-2x"></i></a>
-                  </div>
-                </div>
-                <div class="col-md-6 contactLines">
-                  <a href="https://maps.google.com/?q=5420+N+Morgan+St+Alexandria,+VA+22312">5420 N Morgan St, Alexandria, VA</a>
+      </div> <!-- /container -->
+
+      <!-- Footer -->
+      <section id="contact">
+        <div class="container-fluid footer">
+          <div class="container"> 
+            <div class="row">
+              <div class="col-xs-12 col-sm-4 col-md-2">
+                <div class="heading contact">
+                  <span class="glyphicon glyphicon-user" style="font-size:7em" aria-hidden="true"></span>
+                  <h2>Contact Me</h2>
                 </div>
               </div>
+              <div class="col-xs-12 col-sm-8 col-md-10">
 
-              <div class="row">
-                <div class="col-md-1 col-md-offset-4">
-                  <div class="contactGlyph">
-                    <a href="mailto:chris.f.hull@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a>
+                <div class="row">
+                  <div class="col-md-1 col-md-offset-4">
+                    <div class="contactGlyph">
+                      <a href="https://maps.google.com/?q=5420+N+Morgan+St+Alexandria,+VA+22312"><i class="fa fa-map-marker fa-2x"></i></a>
+                    </div>
+                  </div>
+                  <div class="col-md-6 contactLines">
+                    <a href="https://maps.google.com/?q=5420+N+Morgan+St+Alexandria,+VA+22312">5420 N Morgan St, Alexandria, VA</a>
                   </div>
                 </div>
-                <div class="col-md-6 contactLines">
-                  <a href="mailto:chris.f.hull@gmail.com">chris.f.hull@gmail.com</a>
-                </div>
-              </div>
 
-              <div class="row">
-                <div class="col-md-1 col-md-offset-4">
-                  <div class="contactGlyph">
-                    <i class="fa fa-phone fa-2x"></i>
+                <div class="row">
+                  <div class="col-md-1 col-md-offset-4">
+                    <div class="contactGlyph">
+                      <a href="mailto:chris.f.hull@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a>
+                    </div>
+                  </div>
+                  <div class="col-md-6 contactLines">
+                    <a href="mailto:chris.f.hull@gmail.com">chris.f.hull@gmail.com</a>
                   </div>
                 </div>
-                <div class="col-md-6 contactLines">
-                  +1 402 917 4914
-                </div>
-              </div>
 
-              <div class="row">
-                <div class="col-md-1 col-md-offset-4">
-                  <div class="contactGlyph">
-                    <a href="https://www.linkedin.com/in/hullchristopher"><i class="fa fa-linkedin fa-2x"></i></a>
+                <div class="row">
+                  <div class="col-md-1 col-md-offset-4">
+                    <div class="contactGlyph">
+                      <i class="fa fa-phone fa-2x"></i>
+                    </div>
+                  </div>
+                  <div class="col-md-6 contactLines">
+                    +1 402 917 4914
                   </div>
                 </div>
-                <div class="col-md-6 contactLines">
-                  <a href="https://www.linkedin.com/in/hullchristopher">linkedin.com/in/hullchristopher</a>
-                </div>
-              </div>
 
-              <div class="row">
-                <div class="col-md-1 col-md-offset-4">
-                  <div class="contactGlyph">
-                    <a href="https://www.github.com/cfhull"><i class="fa fa-github fa-2x"></i></a>
+                <div class="row">
+                  <div class="col-md-1 col-md-offset-4">
+                    <div class="contactGlyph">
+                      <a href="https://www.linkedin.com/in/hullchristopher"><i class="fa fa-linkedin fa-2x"></i></a>
+                    </div>
+                  </div>
+                  <div class="col-md-6 contactLines">
+                    <a href="https://www.linkedin.com/in/hullchristopher">linkedin.com/in/hullchristopher</a>
                   </div>
                 </div>
-                <div class="col-md-6 contactLines">
-                  <a href="https://www.github.com/cfhull">github.com/cfhull</a>
-                </div>
-              </div>
 
+                <div class="row">
+                  <div class="col-md-1 col-md-offset-4">
+                    <div class="contactGlyph">
+                      <a href="https://www.github.com/cfhull"><i class="fa fa-github fa-2x"></i></a>
+                    </div>
+                  </div>
+                  <div class="col-md-6 contactLines">
+                    <a href="https://www.github.com/cfhull">github.com/cfhull</a>
+                  </div>
+                </div>
+
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
 
 
 
-  <!-- Put just before closing body tag so pages load faster -->
-  <!-- Obtain jquery javascript library from CDN -->
-  <!-- Check http://code.jquery.com/ for latest version. -->
-  <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-  <!-- Obtain Bootstrap javascript library from CDN (online service) so it doesn't have to be on my machine -->
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <!-- Put just before closing body tag so pages load faster -->
+    <!-- Obtain jquery javascript library from CDN -->
+    <!-- Check http://code.jquery.com/ for latest version. -->
+    <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+    <!-- Obtain Bootstrap javascript library from CDN (online service) so it doesn't have to be on my machine -->
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-  <!-- Obtain javascript.js -->
-  <script src="javascript.js"></script>
-  <script src="generatePie.js"></script>
+    <!-- Obtain javascript.js -->
+    <script src="javascript.js"></script>
+    <script src="generatePie.js"></script>
 
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.4/d3.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.4/d3.min.js"></script>
 
 
 
-</body>
-</html>
+  </body>
+  </html>
