Fixed grammer errors and added dates to experience and education.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-10">
-          <p>I have experience in cyber security, web development, and video game development, love each of the fields, and am excited for opportunities in any of them. My problem-solving skills, my careful attention to detail, and my ability to work independently or in a team tranferred to allow me to thoroughly enjoy all the positions I've held. I am pursuing an Offensive Security Certified Professional (OSCP), developing video with the local independent development community, and continuing to improve upon this website to keep my skills in each of these areas sharp. Please look over my previous experience and skills and contact me if you have any questions or if you would like me to join your team!</p>
+          <p>I have experience in cyber security, web development, and video game development, love each of the fields, and am excited for opportunities in any of them. My problem-solving skills, my careful attention to detail, and my ability to work independently or in a team tranferred to allow me to thoroughly enjoy all the positions I've held. I am pursuing an Offensive Security Certified Professional (OSCP), developing video games with the local independent development community, and continuing to improve upon this website to keep my skills in each of these areas sharp. Please look over my previous experience and skills and contact me if you have any questions or if you would like me to join your team!</p>
         </div>
       </div>
     </section>
@@ -87,14 +87,14 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-10">
-          <h3>Unity3D Programming Engineer</h3>
-          <h4>Galvanize Labs</h4>
+          <h3>Unity3D Programming Engineer (Short-term Contract)</h3>
+          <h4>Galvanize Labs (April 2014 - June 2014)</h4>
           <p>In this short-term contract position, I used the Unity3D game engine to write scripts, fix bugs, and reorganize game assets for an educational platformer game. I also provided gameplay and issues feedback to the lead developer and game designer. Read more about it below.</p>
           <p><a href="http://www.takenchargegame.com">Taken Charge</a></p>
           <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-10">
               <h3>Web Developer</h3>
-              <h4>HDI - Nebraska Chapter</h4>
+              <h4>HDI - Nebraska Chapter (August 2012 - March 2013)</h4>
               <p>I volunteered in maintaining the website for this volunteer professional organization while they underwent a major website revision.</p>
             </div>
           </div>
@@ -102,8 +102,8 @@
           <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-10">
               <h3>Business Support Specialist</h3>
-              <h4>CSG International</h4>
-              <p>I supported our company's business continuity planning operations, this involved:</p>
+              <h4>CSG International (May 2011 - August 2012)</h4>
+              <p>I supported our company's business continuity planning operations. This involved:</p>
               <ul>
                 <li>Writing VBA macros to organize and streamline processes contributing to cost avoidance initiatives</li>
                 <li>Developing a GUI front-end to our SQL database, using ASP.NET</li>
@@ -128,8 +128,8 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-10">
-          <h3>Bachelors of Science Applied Computer Science, Cyber Security Minor</h3>
-          <h4>Troy University</h4>
+          <h3>Bachelors of Science, Computer Science, Minor in Cyber Security</h3>
+          <h4>Troy University (Graduated May 2015)</h4>
           <p>Computer Science Coursework: Data Structures and Algorithms; Programming Languages; Web Development
             Technologies; Software Engineering; Systems Analysis & Design; Operating Systems; Networking; Databases; COBOL
             Programming</p>
@@ -141,9 +141,9 @@
               <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-10">
                   <h3>Certification</h3>
-                  <h4>Offensive Security Certified Professional (OSCP)</h4>
-                  <p>I am currently completing the coursework to prepare for the OSCP exam. I gained an interest in cyber security after completing undergrad courses in the subject, and I wanted to learn more about the tools used by those seeking to break into a network. So far I have found the course to be incredibly helpful in building my skills in Linux, bash scripting, and has helped my understanding of computer networks, and I look forward to taking the exam in July.</p>
-                  <p>More information about Offensive Security can be found <a href="https://www.offensive-security.com/">here</a>.</p>
+                  <h4>Offensive Security Certified Professional (OSCP) (Anticipated July 2015)</h4>
+                  <p>I am completing the coursework to prepare for the OSCP exam. I became interested in cyber security after completing undergrad courses in the subject, and I wanted to learn more about the tools used by those seeking to break into a network. The course has been incredibly helpful in building my skills in Linux and bash scripting, and has increased my understanding of computer networks.</p>
+                  </p>I look forward to taking the exam in July. More information about Offensive Security can be found <a href="https://www.offensive-security.com/">here</a>.</p>
                 </div>
               </div>
             </div>
