fixed grammatical error.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-10">
-          <p>I have experience in cyber security, web development, and video game development, love each of the fields, and am excited for opportunities in any of them. My problem-solving skills, my careful attention to detail, and my ability to work independently or in a team tranferred to allow me to thoroughly enjoy all the positions I've held. I am pursuing an Offensive Security Certified Professional (OSCP), developing video games with the local independent development community, and continuing to improve upon this website to keep my skills in each of these areas sharp. Please look over my previous experience and skills and contact me if you have any questions or if you would like me to join your team!</p>
+          <p>I have experience in cyber security, web development, and video game development, love each of the fields, and am excited for opportunities in any of them. My problem-solving skills, my careful attention to detail, and my ability to work independently or in a team has transferred to my work, and allowed me to thoroughly enjoy all the positions I've held. I am pursuing an Offensive Security Certified Professional (OSCP), developing video games with the local independent development community, and continuing to improve upon this website to keep my skills in each of these areas sharp. Please look over my previous experience and skills and contact me if you have any questions or if you would like me to join your team!</p>
         </div>
       </div>
     </section>
