fixed validation errors

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">	
 		<title>Christopher Hull</title>
 
 		<!-- Bootstrap CDN -->
@@ -139,7 +140,7 @@
 								<h3>Certification</h3>
 								<h4>Offensive Security Certified Professional (OSCP) (Anticipated July 2015)</h4>
 								<p>I am completing the coursework to prepare for the OSCP exam. I became interested in cyber security after completing undergrad courses in the subject, and I wanted to learn more about the tools used by those seeking to break into a network. The course has been incredibly helpful in building my skills in Linux and bash scripting, and has increased my understanding of computer networks.</p>
-								</p>I look forward to taking the exam in July. More information about Offensive Security can be found <a href="https://www.offensive-security.com/">here</a>.</p>
+								<p>I look forward to taking the exam in July. More information about Offensive Security can be found <a href="https://www.offensive-security.com/">here</a>.</p>
 							</div>
 						</div>
 					</div>
@@ -238,7 +239,6 @@
 						</div>
 					</div>
 				</div>
-			</div>
 			</div>
 		</section>
 
