updated profile picture

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div class="jumbotron">
 					<div class="row">
 						<div class="col-md-4">
-							<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/4/005/062/143/35c11a0.jpg" alt="" class="img-thumbnail">
+							<img src="profilepic.jpg" alt="" class="img-thumbnail">
 						</div>    
 						<div class="col-md-8">
 							<h1>Christopher Hull</h1>
