--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 						</div>    
 						<div class="col-md-8">
 							<h1>Christopher Hull</h1>
-							<h3>Recent Computer Science Graduate</h3>
-							<h3>Aspiring web developer,<br> cyber security analyst,<br> or video game developer</h3>
+							<h3>Software Developer</h3>
+							<h3>Aspiring web developer who wants to see real-world impacts from his work</h3>
 						</div>
 					</div>
 				</div>
@@ -68,7 +68,7 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-8 col-md-10">
-						<p>I have experience in cyber security, web development, and video game development, love each of the fields, and am excited for opportunities in any of them. My problem-solving skills, my careful attention to detail, and my ability to work independently or in a team has transferred to my work, and allowed me to thoroughly enjoy all the positions I've held. I am pursuing an Offensive Security Certified Professional (OSCP), developing video games with the local independent development community, and continuing to improve upon this website to keep my skills in each of these areas sharp. Please look over my previous experience and skills and contact me if you have any questions or if you would like me to join your team!</p>
+						<p>I have experience in cyber security, web development, and video game development, love each of the fields, and am excited for opportunities in any of them. My problem-solving skills, my careful attention to detail, and my ability to work independently or in a team has transferred to my work, and allowed me to thoroughly enjoy all the positions I've held. I am developing video games with the local independent development community, and continuing to improve upon this website to keep my skills in each of these areas sharp. Please look over my previous experience and skills and contact me if you have any questions or if you would like me to join your team!</p>
 					</div>
 				</div>
 			</section>
@@ -84,10 +84,21 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-8 col-md-10">
-						<h3>Unity3D Programming Engineer (Short-term Contract)</h3>
-						<h4>Galvanize Labs (April 2014 - June 2014)</h4>
-						<p>In this short-term contract position, I used the Unity3D game engine to write scripts, fix bugs, and reorganize game assets for an educational platformer game. I also provided gameplay and issues feedback to the lead developer and game designer. Read more about it below.</p>
-						<p><a href="http://www.takenchargegame.com">Taken Charge</a></p>
+						<div class="row">
+							<div class="col-xs-12 col-sm-8 col-md-10">
+								<h3>Software Developer</h3>
+								<h4>Ellucian (July 2015 - Present)</h4>
+								<p>I work within an Agile Scrum environment to create new features and fix bugs for a product built on top of Microsoft Dynamics CRM using C#/.NET, and HTML/JavaScript/CSS.</p>								
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12 col-sm-8 col-md-10">
+								<h3>Unity3D Programming Engineer (Short-term Contract)</h3>
+								<h4>Galvanize Labs (April 2014 - June 2014)</h4>
+								<p>In this short-term contract position, I used the Unity3D game engine to write scripts, fix bugs, and reorganize game assets for an educational platformer game. I also provided gameplay and issues feedback to the lead developer and game designer. Read more about it below.</p>
+								<p><a href="http://www.takenchargegame.com">Taken Charge</a></p>
+							</div>
+						</div>
 						<div class="row">
 							<div class="col-xs-12 col-sm-8 col-md-10">
 								<h3>Web Developer</h3>
@@ -95,7 +106,6 @@
 								<p>I volunteered in maintaining the website for this volunteer professional organization while they underwent a major website revision.</p>
 							</div>
 						</div>
-
 						<div class="row">
 							<div class="col-xs-12 col-sm-8 col-md-10">
 								<h3>Business Support Specialist</h3>
@@ -134,15 +144,6 @@
 						<p>Completed cyber security training courses in digital forensics, secure software, cyber law, and cyber incident analysis
 						and response through the National Emergency Response and Rescue Training Center in cooperation with the
 						Department of Homeland Security and Federal Emergency Management Agency (DHS/FEMA).</p>
-
-						<div class="row">
-							<div class="col-xs-12 col-sm-8 col-md-10">
-								<h3>Certification</h3>
-								<h4>Offensive Security Certified Professional (OSCP) (Anticipated July 2015)</h4>
-								<p>I am completing the coursework to prepare for the OSCP exam. I became interested in cyber security after completing undergrad courses in the subject, and I wanted to learn more about the tools used by those seeking to break into a network. The course has been incredibly helpful in building my skills in Linux and bash scripting, and has increased my understanding of computer networks.</p>
-								<p>I look forward to taking the exam in July. More information about Offensive Security can be found <a href="https://www.offensive-security.com/">here</a>.</p>
-							</div>
-						</div>
 					</div>
 				</div>
 			</section>
