--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
 							<div class="row">
 								<div class="col-md-1 col-md-offset-4">
 									<div class="contactGlyph">
-										<a href="https://maps.google.com/?q=5420+N+Morgan+St+Alexandria,+VA+22312"><i class="fa fa-map-marker fa-2x"></i></a>
+										<a href="https://www.google.com/maps/place/Katherine+Paige+Ln,+Falls+Church,+VA+22042"><i class="fa fa-map-marker fa-2x"></i></a>
 									</div>
 								</div>
 								<div class="col-md-6 contactLines">
-									<a href="https://maps.google.com/?q=5420+N+Morgan+St+Alexandria,+VA+22312">5420 N Morgan St, Alexandria, VA</a>
+									<a href="https://www.google.com/maps/place/Katherine+Paige+Ln,+Falls+Church,+VA+22042">2846 Katherine Paige Ln, Falls Church, VA</a>
 								</div>
 							</div>
 
