--- a/index.html
+++ b/index.html
@@ -167,6 +167,14 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-8 col-md-10">
+						<p>Personal evaluation of my proficiency at a variety of technologies using the NIH Proficiency Scale.</p>
+						<ul>
+							<li>1: Fundamental awareness (basic knowledge)</li>
+							<li>2: Novice (limited experience)</li>
+							<li>3: Intermediate (practical application)</li>
+							<li>4: Advanced (applied theory)</li>
+							<li>5: Expert (recognized authority)</li>
+						</ul>
 						<div id="skillContainer">
 							<div id="skillChart"></div>
 							<div id="skillDescription">
