Added description for each skill in the skill chart

--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
 				</div>
 			</section>
 			<hr>
-
-			<!-- Skills -->
+			
 			<section id="skills">
 				<div class="row">
 					<div class="col-xs-12 col-sm-4 col-md-2">
@@ -167,32 +166,32 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-8 col-md-10">
-						<p>Personal evaluation of my proficiency at a variety of technologies using the NIH Proficiency Scale.</p>
-						<ul>
-							<li>1: Fundamental awareness (basic knowledge)</li>
-							<li>2: Novice (limited experience)</li>
-							<li>3: Intermediate (practical application)</li>
-							<li>4: Advanced (applied theory)</li>
-							<li>5: Expert (recognized authority)</li>
-						</ul>
-						<div id="skillContainer">
-							<div id="skillChart"></div>
-							<div id="skillDescription">
-								<p id="html" class="descriptionParagraph">text for html</p>
-								<p id="css" class="descriptionParagraph">text for css</p>
-								<p id="javascript" class="descriptionParagraph">text for js</p>
-								<p id="csharp" class="descriptionParagraph">text for c#</p>
-								<p id="bash" class="descriptionParagraph">text for bash</p>
-								<p id="linux" class="descriptionParagraph">text for linux</p>
-								<p id="git" class="descriptionParagraph">text for git</p>
-								<p id="unity" class="descriptionParagraph">text for unity</p>
-								<p id="d3js" class="descriptionParagraph">text for d3.js</p>
+						<div class="row">
+							<div class="col-xs-12 col-sm-8 col-md-10">
+								<p>Personal evaluation of my proficiency at a variety of technologies using the NIH Proficiency Scale.</p>
+								<ul>
+									<li>1: Fundamental awareness (basic knowledge)</li>
+									<li>2: Novice (limited experience)</li>
+									<li>3: Intermediate (practical application)</li>
+									<li>4: Advanced (applied theory)</li>
+									<li>5: Expert (recognized authority)</li>
+								</ul>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12 col-sm-12 col-md-6">
+								<div id="skillChart"></div>
+							</div>
+							<div class="col-xs-12 col-sm-12 col-md-6">
+								<div id="skillDescription">
+									<p id="descriptionParagraph">Click any bar for more information.</p>
+								</div>		
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-
+			<hr>
 		</div> <!-- /container -->
 
 		<!-- Footer -->
