Initial commit of exoplanet visualization

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="col-md-8">
 							<h1>Christopher Hull</h1>
 							<h3>Software Developer</h3>
-							<h3>Aspiring web developer who wants to see real-world impacts from his work</h3>
+							<h3>Current working on an exoplanet data visualization using D3.js, Check it out <a href="exoplanets.html">HERE</a></h3>
 						</div>
 					</div>
 				</div>
