--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<title>Christopher Hull</title>
 
 		<!-- Local CSS -->
-		<link href="css/app.css" rel="stylesheet" type="text/css" />
+		<link href="css/style.css" rel="stylesheet" type="text/css" />
 
 		<!-- JS Libraries -->
 		<script src="js/lib/jquery.min.js"></script>
@@ -41,7 +41,7 @@
 
 		<!-- Body of web page goes inside container tags -->
 
-		<div class="container">
+		<div class="container container-main">
 
 			<!--Jumbotron header -->
 			<section id="jumbotron">
